MyMathFuncsLib/MyMathFuncsWrapper.h

#include "MyMathFuncs.h"
using namespace MathFuncs;

extern "C" 
{
    MyMathFuncs* CreateMyMathFuncsClass();
    void DisposeMyMathFuncsClass(MyMathFuncs* ptr);
    double MyMathFuncsAdd(MyMathFuncs* ptr, double a, double b);
    double MyMathFuncsSubtract(MyMathFuncs* ptr, double a, double b);
    double MyMathFuncsMultiply(MyMathFuncs* ptr, double a, double b);
    double MyMathFuncsDivide(MyMathFuncs* ptr, double a, double b);
}